doc: fix border style in dark mode

--- a/.dumi/theme/builtins/Previewer.less
+++ b/.dumi/theme/builtins/Previewer.less
@@ -36,7 +36,7 @@
   align-items: stretch;
   border-radius: 12px;
   overflow: hidden;
-  --border-color: @c-border;
+  --border-color: var(--doc-border-color);
   border: 1px solid var(--border-color);
 
   &[data-debug] {
