--- a/.dumi/theme/components/SearchBar.less
+++ b/.dumi/theme/components/SearchBar.less
@@ -43,7 +43,7 @@
     max-height: 230px;
     padding: 6px 0;
     background-color: #fff;
-    border: 1px solid @c-border;
+    border: 1px solid var(--doc-border-color);
     border-radius: 1px;
     box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.05);
     box-sizing: border-box;
