--- a/.dumi/theme/components/device.less
+++ b/.dumi/theme/components/device.less
@@ -24,7 +24,7 @@
   &-action {
     height: 40px;
     background: #ffffff;
-    border-top: 1px solid @c-border;
+    border-top: 1px solid var(--doc-border-color);
 
     [data-prefers-color='dark'] & {
       background: #262626;
