--- a/.dumi/theme/components/slug-list.less
+++ b/.dumi/theme/components/slug-list.less
@@ -54,7 +54,7 @@
         bottom: 0;
         display: inline-block;
         width: 2px;
-        background: @c-border;
+        background: var(--doc-border-color);
       }
 
       &:hover {
